2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (has_audio_extension): Add ".m4a", ".M4A", ".wma",
	".WMA", ".mpc", and ".MPC".

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Only define HAVE_HILDON and HAVE_MAEMO if they are
	actually available.
	* src/starling.c (starling_run): Correctly use the HAVE_HILDON
	macro.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (do_refresh): Update the uid to index has
	correctly in the sorted case.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (do_refresh): Sort tracks without meta-data after
	those with meta-data.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (do_refresh): Fix comparison.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c: Include <obstack.h>.
	(obstack_chunk_alloc): Define.
	(obstack_chunk_free): Define.
	(do_refresh): Don't use sqlite's order by.  Sort in C, if
	appropriate.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_open): Create an index for files on
	removed and an index for playlists on list.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/playlist.c (now): New function.
	(do_refresh): Time loading the play list and emitting signals.

2010-01-11  Neal H. Walfield  <neal@gnu.org>

	* src/marshal.list: Add closure void (*) (guint, guint).
	* src/musicdb.h: Include <string.h>.
	(enum mdb_fields): Don't use 1 << 31.
	(mdb_fields_mask_to_string): New function.
	* src/musicdb.c (struct sig): Add field mask.
	(signals_flush): If emitted a "changed-entry" signal, also pass
	SIG->MASK.
	(signal_schedule): Take additional parameter MASK.  Save it in
	SIG->MASK.  Try to coalesce the last entry on the queue with the
	new entry.
	(music_db_class_init): Initialize the "changed-entry" as a void
	(*) (guint, guint).
	(music_db_set_info_internal): Compute the fields that actually
	changed.  Only shoot the cache or schedule a "changed-entry"
	signal if something actually changed.