@@ -1,3 +1,8 @@
+2010-01-12  Neal H. Walfield  <neal@gnu.org>
+
+	* src/playlist.c (changed_entry): Don't ignore most changes for
+	filter play lists.
+
 2010-01-11  Neal H. Walfield  <neal@gnu.org>
 
 	* src/musicdb.c (has_audio_extension): Add ".m4a", ".M4A", ".wma",
